# Ds3InventoryDumper

./: .gitignore  CMakeLists.txt  Ds3InventoryDumper.sln  README.md  items.json  myds3code.py
Ds3InventoryDumper/: Ds3InventoryDumper.vcxproj  Ds3InventoryDumper.vcxproj.filters  items.txt
Ds3InventoryDumper/src/: Ds3InventoryDumper.cpp
Ds3InventoryDumper_DLL/: Ds3InventoryDumper_DLL.vcxproj  Ds3InventoryDumper_DLL.vcxproj.filters  Helper.cpp  Helper.h  code.py  dllmain.cpp  pch.h
Ds3InventoryDumper_LIB/: CMakeLists.txt  Ds3InventoryDumper_LIB.vcxproj  Ds3InventoryDumper_LIB.vcxproj.filters  pch.h
Ds3InventoryDumper_LIB/Include/: MemoryItems.hpp  jsoncpp.hpp  pch.h
Ds3InventoryDumper_LIB/src/: Ds3InventoryDumper_LIB.cpp  MemoryItems.cpp
