cmake_minimum_required(VERSION 3.25)
project(Ds3InventoryDumper)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(${PROJECT_NAME})
add_subdirectory(${PROJECT_NAME}_DLL)
add_subdirectory(${PROJECT_NAME}_LIB)